--- a/css/cottage-winter.css
+++ b/css/cottage-winter.css
@@ -9,12 +9,24 @@ body {
     -o-background-size: cover;
 }
 
-.name,
-.address-bar {
-    display: none;
-	padding:0px;
-	margin:0;
+
+.top-banner {
+	position:relative;
+	overflow:hidden;
+	height:29%;
+	width:80%
+	padding-bottom: 1%;
+
 }
+
+.banner {
+	margin-left:auto;
+	margin-right:auto;
+	position: relative;
+	width:100%;
+	height:100%;
+}
+
 
 
 .tagline-divider {
@@ -26,9 +38,9 @@ body {
 
 .box {
     margin-bottom: 20px;
-    padding: 30px 15px;
+    padding: 15px 15px;
     background: #fff;
-    background: rgba(255,255,255,0.7);
+    background: rgba(255,255,255,0.5);
 }
 
 
@@ -47,6 +59,11 @@ body {
 	padding:0;
 }
 
+.nav-container {
+	padding:0;
+}
+
+
 .portfolio-item {
 	vertical-align:middle;
     margin-bottom: 25px;
@@ -57,31 +74,11 @@ body {
 }
 
 @media screen and (min-width:768px) {
-    .name{
-        display: inherit;
-        margin: 0;
-        padding: 20px 0 10px;
-        text-align: center;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 3.25em;
-        font-weight: 700;
-		color:#00b1ac;
-    }
+
 	
-    .address-bar {
-        display: inherit;
-        margin: 0;
-        padding: 0 0 20px;
-        text-align: center;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        text-transform: uppercase;
-        font-size: 1.25em;
-        font-weight: 400;
-        letter-spacing: 3px;
-		color:#00b1ac;
-    }
-	
+	.img-responsive {
+		display:block;
+	}
 	
     .navbar {
         border-radius: 0;
