--- a/css/cottage.css
+++ b/css/cottage.css
@@ -9,13 +9,22 @@ body {
 	-o-background-size: cover;
 }
 
-.name,
-.address-bar {
-    display: none;
-	padding:0px;
-	margin:0;
+.top-banner {
+	position:relative;
+	overflow:hidden;
+	height:29%;
+	width:80%
+	padding-bottom: 1%;
+
 }
 
+.banner {
+	margin-left:auto;
+	margin-right:auto;
+	position: relative;
+	width:100%;
+	height:100%;
+	}
 
 .tagline-divider {
     margin: 15px auto 3px;
@@ -32,11 +41,6 @@ body {
 }
 
 
-.img-border {
-    float: none;
-    margin: 0 auto 0;
-    border: #999999 solid 1px;
-}
 
 .img-left {
     float: none;
@@ -47,32 +51,17 @@ body {
 	padding:0;
 }
 
+.nav-container {
+	padding:0;
+}
+
+
 @media screen and (min-width:768px) {
-    .name{
-        display: inherit;
-        margin: 0;
-        padding: 20px 0 10px;
-        text-align: center;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 3.25em;
-        font-weight: 700;
-		color:#00b1ac;
-    }
+
 	
-    .address-bar {
-        display: inherit;
-        margin: 0;
-        padding: 0 0 20px;
-        text-align: center;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
-        text-transform: uppercase;
-        font-size: 1.25em;
-        font-weight: 400;
-        letter-spacing: 3px;
-		color:#00b1ac;
-    }
-	
+	.img-responsive {
+		display:block;
+	}
 	
     .navbar {
         border-radius: 0;
