--- a/css/cottage-summer.css
+++ b/css/cottage-summer.css
@@ -10,13 +10,13 @@ body {
 }
 
 .top-banner {
-	position:relative;
-	overflow:hidden;
-	height:29%;
-	width:80%
-	padding-bottom: 1%;
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
 
-}
+	}
 
 .banner {
 	margin-left:auto;
@@ -70,6 +70,16 @@ body {
 		display:block;
 	}
 	
+	.top-banner {
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
+
+	}
+	
+	
     .navbar {
         border-radius: 0;
 
@@ -111,7 +121,17 @@ body {
 	}
 }
 @media screen and (min-width:1200px) {
-    .box:after {
+    
+	.top-banner {
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
+
+	}
+	
+	.box:after {
         content: '';
         display: table;
         clear: both;
