--- a/css/cottage-fall.css
+++ b/css/cottage-fall.css
@@ -13,7 +13,7 @@ body {
 .top-banner {
 	position:relative;
 	overflow:hidden;
-	height:29%;
+	height:150px;
 	width:80%
 	padding-bottom: 1%;
 
@@ -84,6 +84,15 @@ body {
     background: #fff;
     background: rgba(255,255,255,0.5);
 	}
+	
+	.top-banner {
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
+
+	}
 
 
     .navbar {
@@ -127,7 +136,17 @@ body {
 	}
 }
 @media screen and (min-width:1200px) {
-    .box:after {
+    
+	.top-banner {
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
+
+	}
+	
+	.box:after {
         content: '';
         display: table;
         clear: both;
