--- a/css/cottage-indoors.css
+++ b/css/cottage-indoors.css
@@ -13,7 +13,7 @@ body {
 .top-banner {
 	position:relative;
 	overflow:hidden;
-	height:29%;
+	height:150px;
 	width:80%
 	padding-bottom: 1%;
 
@@ -70,6 +70,15 @@ body {
 		display:block;
 	}
 	
+	.top-banner {
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
+
+	}
+	
     .navbar {
         border-radius: 0;
 
@@ -111,7 +120,17 @@ body {
 	}
 }
 @media screen and (min-width:1200px) {
-    .box:after {
+    
+	.top-banner {
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
+
+	}
+	
+	.box:after {
         content: '';
         display: table;
         clear: both;
