--- a/css/cottage.css
+++ b/css/cottage.css
@@ -9,10 +9,15 @@ body {
 	-o-background-size: cover;
 }
 
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+
 .top-banner {
 	position:relative;
 	overflow:hidden;
-	height:29%;
+	height:150px;
 	width:80%
 	padding-bottom: 1%;
 
@@ -58,7 +63,14 @@ body {
 
 @media screen and (min-width:768px) {
 
-	
+	.top-banner {
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
+
+	}
 	.img-responsive {
 		display:block;
 	}
@@ -102,10 +114,21 @@ body {
 
 		color: white;
 	}
+	
 }
 
 @media screen and (min-width:1200px) {
-    .box:after {
+    
+	.top-banner {
+		position:relative;
+		overflow:hidden;
+		height:150px;
+		width:80%
+		padding-bottom: 1%;
+
+	}
+	
+	.box:after {
         content: '';
         display: table;
         clear: both;
